update header of elements and fix collapsed styling + icon

--- a/src/Designer/frontend/packages/ux-editor/src/components/Elements/Elements.module.css
+++ b/src/Designer/frontend/packages/ux-editor/src/components/Elements/Elements.module.css
@@ -13,19 +13,20 @@
 }
 
 .componentsHeader {
-  margin: var(--fds-spacing-3);
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  background-color: var(--ds-color-surface-neutral);
+  padding-inline: var(--ds-size-4);
+  height: var(--ds-size-15);
+  border-bottom: 1px solid var(--ds-color-neutral-border-subtle);
+  box-sizing: border-box;
 }
 
-.openElementsButton {
-  writing-mode: vertical-lr;
-  text-transform: uppercase;
-  border-radius: 0;
+.collapsedPanel {
+  margin-top: var(--ds-size-2);
+  width: 100%;
 }
-
 .noPageSelected {
   padding-inline: var(--fds-spacing-3);
 }
